--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
     "base_font": "serif",
     "header": {
         "title": "Personal",
-        "logo": "/images/yowie-logo.jpg",
+        "logo": "/images/logo.svg",
         "logo_alt": "Personal logo",
         "has_primary_nav": true,
         "primary_nav_links": [
