--- a/content/data/config.json
+++ b/content/data/config.json
@@ -4,7 +4,7 @@
     "layout_type": "boxed",
     "style": "classic",
     "palette": "gray",
-    "mode": "dark",
+    "mode": "light",
     "base_font": "sans-serif",
     "header": {
         "title": "Personal",
