--- a/content/data/config.json
+++ b/content/data/config.json
@@ -31,7 +31,7 @@
         "has_secondary_nav": false
     },
     "footer": {
-        "logo": "images/logo.svg",
+        "logo": "/images/yowie-logo.jpg",
         "logo_alt": "Personal logo",
         "has_primary_nav": true,
         "primary_nav_links": [
