--- a/content/data/config.json
+++ b/content/data/config.json
@@ -121,7 +121,7 @@
                 "url": "#",
                 "style": "link",
                 "has_icon": false,
-                "icon": "arrow-left",
+                "icon": "facebook",
                 "icon_position": "right",
                 "new_window": false,
                 "no_follow": false
