config.json: updated has_icon in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -120,7 +120,7 @@
                 "label": "lorem-ipsum",
                 "url": "#",
                 "style": "link",
-                "has_icon": false,
+                "has_icon": true,
                 "icon": "facebook",
                 "icon_position": "right",
                 "new_window": false,
