--- a/content/data/config.json
+++ b/content/data/config.json
@@ -93,7 +93,7 @@
                 "label": "YouTube",
                 "url": "https://www.youtube.com/",
                 "style": "link",
-                "has_icon": true,
+                "has_icon": false,
                 "icon": "youtube",
                 "icon_position": "center",
                 "new_window": true
