--- a/content/data/config.json
+++ b/content/data/config.json
@@ -84,7 +84,7 @@
                 "label": "LinkedIn",
                 "url": "https://www.linkedin.com/",
                 "style": "link",
-                "has_icon": true,
+                "has_icon": false,
                 "icon": "linkedin",
                 "icon_position": "center",
                 "new_window": true
