config.json: updated has_icon in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -66,7 +66,7 @@
                 "label": "Twitter",
                 "url": "https://twitter.com/",
                 "style": "link",
-                "has_icon": true,
+                "has_icon": false,
                 "icon": "twitter",
                 "icon_position": "center",
                 "new_window": true
