--- a/content/data/config.json
+++ b/content/data/config.json
@@ -102,7 +102,7 @@
                 "label": "Vimeo",
                 "url": "https://vimeo.com/",
                 "style": "link",
-                "has_icon": true,
+                "has_icon": false,
                 "icon": "vimeo",
                 "icon_position": "center",
                 "new_window": true
