--- a/content/data/config.json
+++ b/content/data/config.json
@@ -117,7 +117,7 @@
                 "new_window": true
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Facebook",
                 "url": "#",
                 "style": "link",
                 "has_icon": true,
