config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -118,7 +118,7 @@
             },
             {
                 "label": "Facebook",
-                "url": "#",
+                "url": "https://www.facebook.com/YowieBikes",
                 "style": "link",
                 "has_icon": true,
                 "icon": "facebook",
