--- a/content/data/config.json
+++ b/content/data/config.json
@@ -33,7 +33,7 @@
     "footer": {
         "logo": "/images/logo.svg",
         "logo_alt": "Personal logo",
-        "has_primary_nav": true,
+        "has_primary_nav": false,
         "primary_nav_links": [
             {
                 "label": "About",
