config.json: updated label in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,7 +23,7 @@
                 "style": "link"
             },
             {
-                "label": "Contact me",
+                "label": "Contact us",
                 "url": "/contact",
                 "style": "link"
             }
